--- a/angular.json
+++ b/angular.json
@@ -119,8 +119,13 @@
               "devServerTarget": "recipe-app:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "recipe-app"
 }
