--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@ngrx/store": "^10.0.0",
     "angular-cli-ghpages": "^0.6.0",
     "bootstrap": "^3.4.1",
     "rxjs": "~6.4.0",
