--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/cli": "~8.3.14",
     "@angular/compiler-cli": "~8.2.11",
     "@angular/language-service": "~8.2.11",
+    "@ngrx/router-store": "^10.0.1",
     "@ngrx/store-devtools": "^10.0.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
